src/css/style.css
:root {
  --custom-light-red: #ff0000;
  --flagged-item-box-shadow: 0px 0px 5px 2px var(--custom-light-red) !important;
}

.display-none {
  display: none !important;
}

.display-padding {
  gap: 16px !important;
  margin-top: 24px !important;
  margin-bottom: 24px !important;
}

.inline-flex-row {
  display: flex !important;
  flex-direction: row !important;
  align-items: center !important;
  gap: 6px !important;
}

.inline-flex-col {
  display: flex !important;
  flex-direction: column !important;
  gap: 8px !important;
}

.font-bold {
  font-weight: 600 !important;
}

.align-end {
  text-align: end !important;
}

text-black {
  color: black !important;
}

.main-content {
  margin-right: 4px !important;
}

.sponsored-label,
.flagged-list-title,
.label-text {
  border-radius: 2px !important;
  padding: 8px 12px !important;
  background-color: #ffdbdf !important;
  font-weight: bold !important;
  color: var(--custom-light-red) !important;
}

.price-checker-outline {
  border: 1px solid var(--color-border-neutral-default) !important;
  border-radius: 16px !important;
  padding: 20px 24px !important;
}

.go-to-shop-button-positive:hover {
  background-color: var(--color-text-marketplace-strong) !important;
  transition: background-color 0.3s ease;
}

.go-to-shop-button-positive {
  border: 1px solid var(--color-text-success-default) !important;
  border-radius: 32px !important;
  padding: 8px 12px !important;
  font-weight: 400 !important;
  background-color: var(--color-text-success-default) !important;
  color: var(--color-text-base-default) !important;
}

.go-to-shop-button-negative:hover {
  background-color: #db791a !important;
  transition: background-color 0.3s ease;
}

.go-to-shop-button-negative {
  border: 1px solid var(--color-text-accent-default) !important;
  border-radius: 32px !important;
  padding: 8px 12px !important;
  font-weight: 400 !important;
  background-color: var(--color-text-accent-default) !important;
  color: var(--color-text-base-default) !important;
}

.lowest-price-store-highlight {
  border: 2px solid var(--color-text-success-default) !important;
  box-shadow: 1px 1px 0 var(--color-text-success-default) !important;
}

.info-label-positive {
  /* border: 1px solid var(--color-text-success-default) !important; */
  border: 1px solid var(--color-background-success-weak) !important;
  line-height: 1.4 !important;
  font-size: 16px !important;
  font-weight: 500 !important;
  background-color: var(--color-background-success-weak) !important;
  color: var(--color-text-success-default) !important;
}

.info-label-negative {
  /* border: 1px solid var(--color-text-accent-default) !important; */
  border: 1px solid var(--color-background-accent-weak) !important;
  line-height: 1.4 !important;
  font-size: 16px !important;
  font-weight: 500 !important;
  background-color: var(--color-background-accent-weak) !important;
  color: var(--color-text-accent-default) !important;
}

.sponsored-label svg,
.info-label-positive svg,
.info-label-negative svg {
  vertical-align: middle !important;
}

.info-label-positive img,
.info-label-negative img {
  width: 26px !important;
  height: 26px !important;
  flex-shrink: 0 !important;
}

.icon-border {
  display: inline-block !important;
  padding: 4px 12px !important;
  color: var(--color-text-neutral-default) !important;
  font-size: 14px !important;
  font-style: italic !important;
  font-family: Arial, sans-serif !important;
  text-align: end !important;
  vertical-align: middle !important;
}

.deliver-cost {
  display: inline-block;
  padding: 4px;
  color: var(--color-text-neutral-strong);
  font-size: 14px;
  font-family: Arial, sans-serif;
  vertical-align: bottom;
}

.shipping-cost {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--color-text-neutral-strong);
  gap: 6px;
  font-size: 16px;
  font-weight: 600 !important;
  padding-left: 8px;
}

